<resources>
    <string name="app_name">InClass8-28</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="descrption">Descrption of Menu Item</string>
    <string name="visible">Make\nVisibile</string>
    <string name="invisible">Make\nInvisible</string>
    <string name="turnW">Make\nBackground\nWhite</string>
    <string name="turnR">Make\nBackground\nRed</string>
</resources>
